# paperplane

./: .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: TODO.md  changelog.md  index.md  readme.md  settings.md  usage.md
examples/: pt_api.py
paperplane/: main.py  version.py
paperplane/api/v1/endpoints/: api.py
paperplane/core/: apikey.py  engine.py  errors.py  settings.py
paperplane/core/event/: engine.py  manager.py
paperplane/core/trade/: account.py  constants.py  market.py  report_builder.py
paperplane/db/client/: mongodb.py  mongodb_utils.py
paperplane/models/: constant.py  event.py  model.py  model_mixin.py  object_action.py
paperplane/outside/: pytdx_api.py  tushare_api.py
scripts/: start_server.py
tests/: conftest.py  test_account.py  test_api.py  test_market.py  test_sdk.py
tests/fixtures/: account.json  order.json
