[tool.poetry]
name = "paperplane"
version = "0.1.0"
description = "金牛智道的智能模拟炒股后台"
authors = ["邱承 <qiucheng@jinniuai.com>"]

[[tool.poetry.source]]
name = 'tsinghua'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'

[[tool.poetry.source]]
name = 'private'
url = 'http://cxan.chong.so:88/simple/'

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.42.0"
pytdx = "^1.72"
python-dotenv = "^0.10.3"
uvicorn = "^0.9.0"
motor = "^2.0"
email-validator = "^1.0"
bs4 = "^0.0.1"
tushare = "^1.2"
lxml = "^4.4"
ujson = "^1.35"

[tool.poetry.dev-dependencies]
mkdocs = "^1.0"
mkdocs-material = "^4.4"
requests = "^2.22"
pytest = "^5.2"

[tool.black]
line-length = 160
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

